# testrust

./: .gitignore  Cargo.toml
migrations/: README.md
migrations/YYYY-MM-DD-HHMMSS_create_attributes_table/: down.sql  up.sql
src/: container.rs  dasarrollo_beta.txt  lib.rs  main.rs
src/.cargo/: config.toml
src/Application/: mod.rs
src/Application/DTOs/: auth_dto.rs  create_user_dto.rs  mod.rs  update_user_dto.rs  user_dto.rs
src/Application/Services/: database_selector.rs  mod.rs
src/Application/errors/: application_error.rs  mod.rs
src/Application/mappers/: mod.rs  user_mapper.rs
src/Application/ports/: mod.rs  repositories.rs  unit_of_work.rs
src/Application/use_cases/: mod.rs  traits.rs
src/Application/validators/: mod.rs  user_validator.rs
src/Container/: app_state.rs  builder.rs  mod.rs
src/Container/modules/: auth_module.rs  controller_module.rs  database_module.rs  health_module.rs  logical_entity_module.rs  mod.rs  repository_module.rs  user_module.rs
src/Domain/: errors.rs  mod.rs
src/Domain/Entities/: attribute.rs  data_type.rs  entity.rs  mod.rs  role.rs  tuple.rs  user.rs  user_preference.rs
src/Domain/Repositories/: entity_repository.rs  mod.rs  user_repository.rs
src/Domain/Services/: auth_service.rs
src/Domain/attributes/: attribute.rs  mod.rs  repository.rs  value_objects.rs
src/Domain/data_types/: data_type.rs  repository.rs
src/Domain/logical_entities/: logical_entity.rs  mod.rs  repository.rs  value_objects.rs
src/Domain/views/: repository.rs
src/Factory/: dependency_provider.rs  mod.rs
src/Factory/implementations/: auth_factory.rs  health_factory.rs  mod.rs  user_factory.rs
src/Infrastructure/: factory.rs  mod.rs  old_factory.rs
src/Infrastructure/Persistence/: connection_pools.rs  database.rs  mapper.rs  mod.rs  schema.rs  sqlx_database.rs  sqlx_mapper.rs  transaction.rs  transaction_helper.rs  unit_of_work.rs
src/Infrastructure/Services/: auth_service.rs  jwt_auth_service.rs  mod.rs
src/Infrastructure/auth/: mod.rs  (+1 more)
src/Presentation/: mod.rs
(+78 files in other folders)
